--- a/index.css
+++ b/index.css
@@ -122,6 +122,7 @@
     padding: 10px;
     letter-spacing: 3px;
     cursor: pointer;
+    margin-top: 20px;
 }
 
 .btn-atrapar:hover {
@@ -181,10 +182,107 @@
     font-weight: 100;
 }
 
+.list-pedis {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+    flex-wrap: wrap;
+     flex-direction: column;
+     margin-bottom: 200px;
+}
+
+.title-list-pedis {
+margin-top: 200px;
+    color: #0c4ea2;
+    text-transform: uppercase;
+    font-size: 3rem;
+    font-family: "lato-regular";
+}
+
+.conteiner-cards {
+    display: flex;   
+    width: 80%;
+    flex-wrap: wrap;
+}
+
+.fila-pokemones {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.cards {
+    width: 15%;
+    height: 400px;
+    box-shadow: 1px 0px 23px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 1px 0px 23px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 0px 23px 0px rgba(0,0,0,0.75);
+    border-radius: 10%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
+    margin-top: 50px;
+
+    min-width: 200px;
+
+}
+
+.cards img {
+    width: 70%;
+}
+
+.name-pokemon {
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    color: #0c4ea2;
+    margin-top: 20px;
+    
+    
+}
+
+.price-pokemon {
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    color: #0c4ea2;
+}
+
+.btn-comprar {
+    width: 60%;
+    border-radius: 15px;
+    padding: 10px;
+    background-color: #f8d66e;
+    color: black;
+    font-family: "lato";
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    margin-top: 20px;
+     margin-bottom: 20px;
+     border: none; transition: all 150ms ease-in;
+     outline: none;
+
+}
+
+.btn-comprar:hover {
+    background-color: #0c4ea2;
+    cursor: pointer;
+    color: white;
+
+}
+
+
+
+
+
+
 @media (max-width: 1700px) and (min-width: 1346px) {
     .ul-nav {
         width: 40%;
     }
+
     
 }
 
